deploy/gcp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examapp-ingress
  namespace: examapp
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: examapp-cert
spec:
  rules:
    - host: staging.hedefokul.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ocelot-gateway
                port:
                  name: http
